--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <div id="z"></div> 
     </div>
     <div id="Angle">
-      <p title="Angle">Rotação em torno de um eixo</p>
+      <p title="Angle">Rotação em torno do:</p>
+      <input type="radio" id="eixo" name="op1" checked>
+        <label for="eixo">Eixo</label>
+      </input>
+      <input type="radio" id="ponto" name="op1">
+        <label for="ponto">Ponto</label>
+      </input>
       <div id="angleX"></div>
       <div id="angleY"></div>
       <div id="angleZ"></div>
-    </div>
-    <div id="Point">
-      <p title="Point">Rotação em torno de um ponto</p>
-      <div id="angle_X"></div>
-      <div id="angle_Y"></div>
-      <div id="angle_Z"></div>
     </div>
     <br \>
     <div id="Scale">
