--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           </input>
           <input type="radio" id="Bezier" name="op">
             <label for="Bezier">Bezier</label>
+            <div id="deltaCubic"></div>
           </input>
         </div>
         <div id="x"></div>
@@ -52,10 +53,13 @@ See https://webgl2fundamentals.org/webgl/lessons/webgl-boilerplate.html
 and https://webgl2fundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
 for webgl-utils, m3, m4, and webgl-lessons-ui.
 -->
+
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+<!-- 
 <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
+-->
 <!-- partial -->
   <script  src="./script.js"></script>
 
