camera features implemented sucessful

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       <div id="scaleY"></div>
       <div id="scaleZ"></div>
     </div>
+    <br \>
+    <div id="Camera">
+      <p title="Camera">Camera</p>
+      <div id="targetAngle"></div>
+      <div id="targetHeight"></div>
+    </div>
   </div>
 </div>
 <!--
@@ -56,6 +62,7 @@ for webgl-utils, m3, m4, and webgl-lessons-ui.
 
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+<script src="https://webgl2fundamentals.org/webgl/resources/headdata.js"></script>
 <!-- 
 <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
 <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
