some new camera features

--- a/index.html
+++ b/index.html
@@ -49,6 +49,27 @@
       <p title="Camera">Camera</p>
       <div id="targetAngle"></div>
       <div id="targetHeight"></div>
+      <div id="x_Position"></div>
+      <div id="y_Position"></div>
+      <div id="z_Position"></div>
+      <div id="cameraTargetX"></div>
+      <div id="cameraTargetY"></div>
+      <div id="cameraTargetZ"></div>
+      <div id="cameraHeightX"></div>
+      <div id="cameraHeightY"></div>
+      <div id="cameraHeightZ"></div>
+      <div id="select">
+        <p title="select">Selecione uma dentre as cameras:</p>
+        <input type="radio" id="default" name="op2" checked>
+          <label for="default">Padrão</label>
+        </input>
+        <input type="radio" id="view1" name="op2">
+          <label for="view1">Camera 1</label>
+        </input>
+        <input type="radio" id="view2" name="op2">
+          <label for="view2">Camera 2</label>
+        </input>
+      </div>
     </div>
   </div>
 </div>
