zoom feature working

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <div id="cameraTargetX"></div>
             <div id="cameraTargetY"></div>
             <div id="cameraTargetZ"></div>
+            <div id="Zoom"></div>
           </div>
           <div id="cameraHeightX"></div>
           <div id="cameraHeightY"></div>
