notting very good

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <canvas id="canvas"></canvas>
 <div id="uiContainer">
   <div id="ui">
-    <div id="Translate">
+    <div id="Translate" >
       <p title="Translação">Translação</p>    
         <div>
           <input type="radio" id="Linear" name="op" checked>
@@ -46,16 +46,15 @@
       <div id="scaleZ"></div>
     </div>
     <br \>
-    <div id="Models">
-      <p title="Models">Modelos</p>
+    <div id="variousModels">
+      <p title="variousModels">Modelos</p>
       <input type="radio" id="Default" name="op2" checked>
         <label for="Default">Padrão</label>
       </input>
       <input type="radio" id="Loaded" name="op2">
         <label for="Loaded">Carregado</label>
       </input>
-      <input type="file" id="Models" accept=".js">
-        <label for="Models">Selecione um modelo:</label>
+      <input type="file" id="Models" accept=".js" disabled="true">
       </input>
     </div>
 </div>
