--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
       <input type="radio" id="Loaded" name="op2">
         <label for="Loaded">Carregado</label>
       </input>
-      <input type="file" id="Models" accept=".js" disabled="true">
-      </input>
+    </div>
+      <input type="file" id="Models" accept=".js" disabled="true"></input>
+    <br \>
+    <div id="Animations">
+      <p title="Animations">Animações</p>
+      <button id="anim1">
+        <label for="anim1">Animação 1</label>
+      </button>
+      <button id="anim2">
+        <label for="anim2">Animação 2</label>
+      </button>
     </div>
 </div>
 <div id="uiCamera">
@@ -89,9 +98,11 @@
           <input type="radio" id="default" name="op3" checked>
             <label for="default">Padrão</label>
           </input>
+          <br \>
           <input type="radio" id="view1" name="op3">
             <label for="view1">Câmera 1</label>
           </input>
+          <br \>
           <input type="radio" id="view2" name="op3">
             <label for="view2">Câmera 2</label>
           </input>
