--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <div id="cameraTransforms">
           <div id="cameraTranslate">
             <label for="cameraTranslate">Translação</label>
+            </div>
             <div id="x_Position"></div>
             <div id="y_Position"></div>
             <div id="z_Position"></div>
